# Tap

./: .gitignore  Cargo.toml  LICENSE  README.md  notes.db
src/: main.rs
src/components/: mod.rs  note_app.rs  note_content.rs
src/models/: db.rs  mod.rs  note.rs  note_repository.rs
src/util/: macos_menu.rs  mod.rs
